--- a/academy/emails/2016-08-24-new_venue.md
+++ b/academy/emails/2016-08-24-new_venue.md
@@ -3,7 +3,7 @@ Hello Everyone,
 
 #### Academy / Castle / Holland Park Bridge Group
 
-Thank you everyone who attended the first game at the new venue _The Castle_, I hope everyone had an enjoyable evening. I would welcome your feedback and inital thoughts, please email me any comments you have or let me know next week.
+Thank you everyone who attended the first game at the new venue _The Castle_. I would welcome your feedback and inital thoughts on the venue, please email me any comments you have or let me know next week.
 
 The results for _24th August 2016 - Gentle Duplicate_ are as follows:
 
