--- a/academy/emails/2016-08-24-new_venue.md
+++ b/academy/emails/2016-08-24-new_venue.md
@@ -3,7 +3,7 @@ Hello Everyone,
 
 #### Academy / Castle / Holland Park Bridge Group
 
-Thank you everyone who attended the first game at the new venue _The Castle_. I would welcome your feedback and inital thoughts on the venue, please email me any comments you have or let me know next week.
+Thank you to those who attended the first game at the new venue _The Castle_, I hope you all had an enjoyable evening. I would welcome your feedback and inital thoughts on the new venue, please email me any comments you have or let me know next week.
 
 The results for _24th August 2016 - Gentle Duplicate_ are as follows:
 
@@ -17,7 +17,7 @@ The results for _24th August 2016 - Gentle Duplicate_ are as follows:
 |Sheelagh Stafford & Caroline Bottoms|41.67%|
 |Lynne Maxwell & Gita Roy|31.67%|
 
-The full details along with hand records can be found on the [ruffclub website](http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?pid=display_rank&event=20160824_1&club=ruffclub).
+The full results along with hand records can be found on the [ruffclub website](http://www.bridgewebs.com/cgi-bin/bwoi/bw.cgi?pid=display_rank&event=20160824_1&club=ruffclub).
 
 If there were any boards which you think were particularly interesting or challenging which you would like to discuss please let me know. Hope to see you again soon.
 
