new venue email

--- a/academy/emails/2016-10-26-new_venue.md
+++ b/academy/emails/2016-10-26-new_venue.md
@@ -5,7 +5,7 @@ Hello Everyone,
 
 I've an important update to make regarding changes in the venue where we play. I can confirm that we will no longer be playing at _The Castle_ where we have played for the past few months. As you are probably all well aware _The Castle_ was quite small, noisy and didn't really suit our needs - which when you're trying to concentrate playing that critical 7NT, it can make all the difference.
 
-With the help of all of you over the past weeks I am delighted to announce that we have a new venue in place for next week - [The Walmer Castle](https://www.walmercastlenottinghill.co.uk/) / [Map](https://goo.gl/maps/QcMgQpUAovE2)
+With the help of all of you over the past few weeks, I am delighted to announce that we have a new venue in place for next week - [The Walmer Castle](https://www.walmercastlenottinghill.co.uk/) / [Map](https://goo.gl/maps/QcMgQpUAovE2)
 
 We will be playing in a room upstairs which is out of the way of the main bar downstairs. We have asked for the music to be as low as possible and the lights to be as bright as possible - thank you for providing the feedback, personally I believe this will be a huge improvement. I have included all the details below but please don't hesitate to email or phone me if you require any extra details.
 
