new venue email

--- a/academy/emails/2016-10-26-new_venue.md
+++ b/academy/emails/2016-10-26-new_venue.md
@@ -5,9 +5,9 @@ Hello Everyone,
 
 I've an important update to make regarding changes in the venue where we play. I can confirm that we will no longer be playing at _The Castle_ where we have played for the past few months. As you are probably all well aware _The Castle_ was quite small, noisy and didn't really suit our needs - which when you're trying to concentrate playing that critical 7NT, it can make all the difference.
 
-With the help of all of you over the past few weeks, I am delighted to announce that we have a new venue in place for next week - [The Walmer Castle](https://www.walmercastlenottinghill.co.uk/) / [Map](https://goo.gl/maps/QcMgQpUAovE2)
+With the help of everyone who has attended over the past few weeks, I am delighted to announce that we have a new venue in place from this week onwards (Starting on 2nd November) - [The Walmer Castle](https://www.walmercastlenottinghill.co.uk/) / [Map](https://goo.gl/maps/QcMgQpUAovE2)
 
-We will be playing in a room upstairs which is out of the way of the main bar downstairs. We have asked for the music to be as low as possible and the lights to be as bright as possible - thank you for providing the feedback, personally I believe this will be a huge improvement. I have included all the details below but please don't hesitate to email or phone me if you require any extra details.
+We will be playing in a room upstairs which is out of the way of the main bar downstairs. We have asked for the music to be as low as possible and the lights to be as bright as possible - thank you for providing the feedback, personally I believe this will be a huge improvement. I have included all the details below but please don't hesitate to email (`mark.dessain@gmail.com`) or phone (`+44 07960 841271`) me if you require any extra details.
 
 #### Details
 
@@ -19,6 +19,7 @@ We will be playing in a room upstairs which is out of the way of the main bar do
 
 > Parking: There should be plenty of parking spaces close to the pub on the nearby roads.
 
+If you know of anyone that may wish to attend but does not regularly receieve these emails please can you let them know of the move.
 
 Regards,
 
