new venue email

--- a/academy/emails/2016-10-26-new_venue.md
+++ b/academy/emails/2016-10-26-new_venue.md
@@ -19,7 +19,7 @@ We will be playing in a room upstairs which is out of the way of the main bar do
 
 > Parking: There should be plenty of parking spaces close to the pub on the nearby roads.
 
-If you know of anyone that may wish to attend but does not regularly receieve these emails please can you let them know of the move.
+If you know of anyone that may wish to attend but does not regularly receive these emails please can you let them know of the move.
 
 Regards,
 
