--- a/academy/emails/2017-10-30-results.md
+++ b/academy/emails/2017-10-30-results.md
@@ -1,7 +1,7 @@
 
 Hello Everyone,
 
-#### Holland Park Bridge Group Results
+#### Walmer Castle Bridge Group Results
 
 The results for _25th October 2017 - Gentle Duplicate_ are as follows:
 
